--- a/app/views/shared/_flash_notice.html.erb
+++ b/app/views/shared/_flash_notice.html.erb
@@ -1,30 +1,23 @@
-<div id="notice" class="transition-opacity duration-500 ease-in-out opacity-100 flex justify-start px-8 sm:px-24 fixed top-4 left-4 z-50">
-  <div class="bg-[#ffffff] flex justify-between border-slate-300 rounded-lg min-w-[100%] mt-3 p-4 items-center">
-    <div class="flex gap-3 items-center">
-      <img src=<%= asset_path('icon/info.svg') %> alt="notice" class="size-5">
-      <div class="flex flex-col">
-        <div class="text-sm font-bold">
-          Notification
-        </div>
-        <div class="text-sm text-[#000000]">
-          <%= message %>
-        </div>
-      </div>
+<div id="notice" class="fixed top-4 left-1/2 transform -translate-x-1/2 z-50 transition-opacity duration-500 ease-in-out opacity-100">
+  <div class="bg-blue-50 border border-blue-200 text-blue-700 rounded-lg shadow-lg px-4 py-3 flex items-center gap-3 w-[95%] sm:w-[400px]">
+    <img src="<%= asset_path('icon/info.svg') %>" alt="Notice icon" class="w-6 h-6">
+    <div>
+      <p class="text-sm font-medium">Notification</p>
+      <p class="text-xs text-gray-600"><%= message %></p>
     </div>
-    <img src="<%= asset_path('icon/close.svg') %>" alt="Close notice" class="w-4 h-4 cursor-pointer"
-         onclick="fadeOut(this.closest('#notice'));">
+    <button class="ml-auto text-gray-500 hover:text-blue-700" onclick="fadeOut(document.getElementById('notice'))">
+      &times;
+    </button>
   </div>
 </div>
 
 <script>
   function fadeOut(element) {
-    element.style.opacity = 0;
-    setTimeout(function() {
-      element.style.display = 'none';
-    }, 1000);
+    if (element) {
+      element.style.opacity = '0';
+      setTimeout(() => element?.remove(), 1000);
+    }
   }
 
-  setTimeout(function() {
-    fadeOut(document.getElementById('notice'));
-  }, 3000);
+  setTimeout(() => fadeOut(document.getElementById('notice')), 4000);
 </script>
