--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,4 +1,18 @@
-<div class="alert alert-<%= css_class %> alert-dismissible fade show fixed top-4 left-1/2 transform -translate-x-1/2 z-50" role="alert">
-  <%= message %>
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+<div id="flash" class="fixed top-4 left-1/2 transform -translate-x-1/2 z-50">
+  <div class="alert alert-<%= css_class %> alert-dismissible shadow-lg rounded-md px-4 py-3 flex items-center gap-3 bg-white border-l-4 border-<%= css_class == 'success' ? 'green-500' : 'red-500' %>">
+    <span class="text-sm font-medium text-gray-800">
+      <%= message %>
+    </span>
+    <button type="button" class="btn-close text-gray-500 hover:text-gray-800" data-bs-dismiss="alert" aria-label="Close">
+      &times;
+    </button>
+  </div>
 </div>
+
+<script>
+  setTimeout(function () {
+    const flash = document.getElementById('flash');
+    if (flash) flash.style.opacity = 0;
+    setTimeout(() => flash?.remove(), 2000);
+  }, 3000);
+</script>
