--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -49,33 +49,43 @@ body {
     justify-content: center;
    
 }
-
 .gradient {
     position: absolute;
     border-radius: 50%;
-    filter: blur(120px);
-    overflow: hidden;
-}
-
-.gradient-left {
-    width: 600px; 
-    height: 400px;
-    background: linear-gradient(270deg, rgba(245, 215, 252, 0.80) 0%, rgba(247, 209, 204, 0.80) 45%, rgba(247, 208, 197, 0.80) 57.5%, rgba(255, 185, 18, 0.80) 100%);
-    transform: rotate(-10deg); 
-    top: -50px; 
-    left: -150px;
+    filter: blur(120px); 
     z-index: -1;
-}
-
-.gradient-right {
-    width: 500px;
+  }
+  
+  /* Smaller left gradient */
+  .gradient-left {
+    width: 300px;
     height: 300px;
-    background: linear-gradient(90deg, rgba(148, 3, 253, 0.50) 0%, rgba(0, 173, 254, 0.50) 100%);
-    transform: rotate(-8deg); 
-    top: -100px; 
-    right: -200px;
-    z-index: -1;
-}
+    top: 50%;   
+    left: 47%;  
+    transform: translate(-50%, -50%) rotate(-10deg);
+    background: linear-gradient(
+      270deg,
+      rgba(245, 215, 252, 0.50) 0%,
+      rgba(247, 209, 204, 0.50) 45%,
+      rgba(247, 208, 197, 0.50) 57.5%,
+      rgba(255, 185, 18, 0.50) 100%
+    );
+  }
+  
+  /* Smaller right gradient */
+  .gradient-right {
+    width: 300px;
+    height: 300px;
+    top: -50%;
+    left: 53%;  
+    transform: translate(-50%, -50%) rotate(8deg);
+    background: linear-gradient(
+      90deg,
+      rgba(148, 3, 253, 0.50) 0%,
+      rgba(0, 173, 254, 0.50) 100%
+    );
+  }
+  
 
 
 /* testimonials section */
