updated landing page text

--- a/app/views/home/about_mentorship.html.erb
+++ b/app/views/home/about_mentorship.html.erb
@@ -10,8 +10,9 @@
 
   <%# Top Section %>
   <div class="mt-32 mb-16 flex flex-col items-center text-center">
-    <p class="text-sm text-gray-600">About DPI</p>
-    <h1 class="text-4xl font-bold mb-4">Discovery Partners Institute</h1>
+    <p class="text-s text-black">A little bit</p>
+    <p class="text-5xl text-black font-bold">About DPI</p>
+    <h1 class="text-l font-bold mb-4">Discovery Partners Institute</h1>
     <p class="text-xl mb-2">empowers people to jumpstart</p>
     <p class="text-xl">their tech careers or companies</p>
     <p class="text-xl mb-6">in Chicago.</p>
@@ -20,7 +21,7 @@
 
   <%# Mentor Section %>
   <div class="mb-12">
-    <p class="text-base font-medium text-center">Get Back By</p>
+    <p class="text-base font-medium text-center">Give Back By</p>
     <h2 class="text-4xl font-bold text-center mb-8">Becoming A DPI Mentor</h2>
     <div class="max-w-3xl mx-auto">
       <p class="text-lg leading-relaxed">
