update: Make the layout the same as the dashboard

--- a/app/views/profile/_profile.html.erb
+++ b/app/views/profile/_profile.html.erb
@@ -1,4 +1,4 @@
-<section class="col-span-3">
+<section class="col-span-3 w-[50rem]">
   <h1 class="text-2xl font-semibold text-[#202020] mb-1">
     <% if @role == "mentor" %>
       Mentor Profile
