--- a/app/views/profile/show.html.erb
+++ b/app/views/profile/show.html.erb
@@ -1,6 +1,6 @@
-<div class="grid grid-col-1 sm:grid-cols-4 gap-5 mt-[5rem] px-4 sm:py-9 sm:px-24 max-w-[100%]">
+<div class="flex justify-center p-6 lg:px-24 lg:py-10 gap-[1.3rem]">
   <div class="desktop-view">
-    <div class="flex flex-col space-y-5 col-span-1">
+    <div class="flex flex-col space-y-5 col-span-1 w-[17rem]">
       <%= render partial: 'dashboard/user_card' %>
       <%= render partial: 'dashboard/program_card' %>
     </div>
